--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Install MySQL Client
         run: |
           apt-get update
+          pkill dirmngr
           apt-get install -y wget ca-certificates gnupg
           apt-key adv --recv-keys --keyserver keys.gnupg.net 8C718D3B5072E1F5
           echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-${{ matrix.mysql_version }}" >> /etc/apt/sources.list.d/mysql.list
