--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,12 +47,13 @@ jobs:
           MYSQL_ROOT_PASSWORD: root
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
-    container: elixir:1.9-slim
+    container: elixir:${{ matrix.elixir_version }}-slim
 
     strategy:
       fail-fast: false
       matrix:
         mysql_version: ["5.7", "8.0"]
+        elixir_version: [1.8, 1.9, 1.10, 1.11]
 
     steps:
       - name: Install MySQL Client
@@ -88,8 +89,17 @@ jobs:
     strategy:
       matrix:
         mssql_version: ["2017-latest", "2019-latest"]
-        otp: [22.1.7]
-        elixir: [1.9.4]
+        include:
+          - elixir: 1.8.2
+            otp: 20.3.8.26
+          - elixir: 1.9.4
+            otp: 20.3.8.26
+          - elixir: 1.10.4
+            otp: 21.3.8.18
+          - elixir: 1.11.0
+            otp: 21.3.8.18
+          - elixir: 1.11.0
+            otp: 23.1.1
         
     env:
       ACCEPT_EULA: Y
@@ -134,6 +144,23 @@ jobs:
       fail-fast: false
       matrix:
         pg_version: ["9.5", "9.6", "11"]
+        include:
+          - elixir: 1.8.2
+            otp: 20.3.8.26
+            bionic_version: 20200403
+          - elixir: 1.9.4
+            otp: 20.3.8.26
+            bionic_version: 20200403
+          - elixir: 1.10.4
+            otp: 21.3.8.18
+            bionic_version: 20200630
+          - elixir: 1.11.0
+            otp: 21.3.8.18
+            bionic_version: 20200630
+          - elixir: 1.11.0
+            otp: 23.1.1
+            bionic_version: 20200630
+
         elixir: [1.11.0]
         otp: [23.1.1]
         bionic_version: [20200630]
