--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,18 +88,19 @@ jobs:
 
     strategy:
       matrix:
-        mssql_version: ["2017-latest", "2019-latest"]
         include:
           - elixir: 1.8.2
             otp: 20.3.8.26
-          - elixir: 1.9.4
+            mssql_version: "2017-latest"
+          - elixir: 1.8.2
             otp: 20.3.8.26
-          - elixir: 1.10.4
-            otp: 21.3.8.18
+            mssql_version: "2019-latest"
           - elixir: 1.11.0
             otp: 21.3.8.18
+            mssql_version: "2017-latest"
           - elixir: 1.11.0
             otp: 23.1.1
+            mssql_version: "2019-latest"
         
     env:
       ACCEPT_EULA: Y
