--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       fail-fast: false
       matrix:
         mysql_version: ["5.7", "8.0"]
-        elixir_version: ["1.8", "1.9", "1.10", "1.11"]
+        elixir_version: ["1.8", "1.9", "1.10"]
 
     steps:
       - name: Install MySQL Client
